--- a/views/form2.html
+++ b/views/form2.html
@@ -21,7 +21,7 @@
         </repeat>
     </select>
 
-    <label for="name">Name</label>
+    <br><br><label for="name">Name</label><br>
     <input type="text" name="name" id="name" value="{{ @name }}">
 <button type="submit">Next>></button>
 </form>
